--- a/ExpressFrontend/views/index.html
+++ b/ExpressFrontend/views/index.html
@@ -1,3 +1,4 @@
+
 <html>
   <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
@@ -11,41 +12,107 @@
       </div>
     </div>
     <div class="container" id="myContentArea" </div>
-    
-
+    <table class="table table-striped" id="myWeatherTable">
+        <thead>
+            <tr>
+                <th>Date</th>
+                <th>Minimal temperature</th>
+                <th>Maximum temperature</th>
+                <th>Wind direction</th>
+                <th>Wind force</th>
+                <th>Rain</th>
+            </tr>
+        </thead>
+        <tbody id="myWeatherTableBody">
+        </tbody>
+    </table>
     <script>
-
+      function degreeToDirection(degree) {
+        if (degree >= 348.75 || degree < 11.25) {
+          return "N";
+        } else if (degree >= 11.25 && degree < 33.75) {
+          return "NNE";
+        } else if (degree >= 33.75 && degree < 56.25) {
+          return "NE";
+        } else if (degree >= 56.25 && degree < 78.25) {
+          return "ENE";
+        } else if (degree >= 78.75 && degree < 101.25) {
+          return "E";
+        } else if (degree >= 101.25 && degree < 123.75) {
+          return "ESE";
+        } else if (degree >= 123.75 && degree < 146.25) {
+          return "SE";
+        } else if (degree >= 146.25 && degree < 168.75) {
+          return "SSE";
+        } else if (degree >= 168.75 && degree < 191.25) {
+          return "S";
+        } else if (degree >= 191.25 && degree < 213.75) {
+          return "SSW";
+        } else if (degree >= 213.75 && degree < 236.25) {
+          return "SW";
+        } else if (degree >= 236.25 && degree < 258.75) {
+          return "WSW";
+        } else if (degree >= 258.75 && degree < 281.25) {
+          return "W";
+        } else if (degree >= 281.25 && degree < 303.75) {
+          return "WNW";
+        } else if (degree >= 303.75 && degree < 326.25) {
+          return "NW";
+        } else if (degree >= 326.25 && degree < 348.75) {
+          return "NNW";
+        }
+      }
       $(function() {
-       var _myContentArea = document.getElementById("myContentArea");
-       var _mySearchButton = document.getElementById("mySearchButton");
-       _mySearchButton.onclick = getData;
+   var _myContentArea = document.getElementById("myContentArea");
+   var _mySearchButton = document.getElementById("mySearchButton");
+   var _myWeatherTableBody = document.getElementById("myWeatherTableBody");
+   _mySearchButton.onclick = getData;
 
-       function getData(){
-       var _mySearchField = document.getElementById("mySearchField");
-           $.ajax({
-           url: "https://localhost:7063/weather/"+_mySearchField.value,
-          method: "GET",
-           dataType: "json",
-           success: function(data) {
-               var str = "";
-               str += '<h1>Weather for ' + data.city.name + '</h1><br>'          
-              for(var i= 0; i < data.list.length; i++){
+   function getData(){
+   var _mySearchField = document.getElementById("mySearchField");
+       $.ajax({
+       url: "https://localhost:7063/weather/"+_mySearchField.value,
+      method: "GET",
+       dataType: "json",
+       success: function(data) {
+           var str = "";
+           str += '<h1>Weather for ' + data.city.name + '</h1><br>'
+           _myWeatherTableBody.innerHTML = "";
+          for(var i= 0; i < data.list.length; i++){
+            var tr = document.createElement("tr");
 
-                str += 'Date: ' + data.list[i].dt_txt + ' Minimal temperature: ' + data.list[i].main.temp_min + '°C Maximum temperature: ' + data.list[i].main.temp_max + '°C Wind direction: ' + data.list[i].wind.deg + '° Wind force: ' + data.list[i].wind.speed + 'm/s Rain: ';
-                if (data.list[i].rain != null)
-                {
-                  str += Object.values(data.list[i].rain)[0] + 'mm <br><br>';
-                } else
-                {
-                  str += '0 mm <br><br>';
-                }
-              }
-             _myContentArea.innerHTML = str;
-           }
-           });
+            var tdDate = document.createElement("td");
+            var tdMinTemp = document.createElement("td");
+            var tdMaxTemp = document.createElement("td");
+            var tdWindDir = document.createElement("td");
+            var tdWindForce = document.createElement("td");
+            var tdRain = document.createElement("td");
+
+            tdDate.innerHTML = data.list[i].dt_txt;
+            tdMinTemp.innerHTML = data.list[i].main.temp_min + "°C";
+            tdMaxTemp.innerHTML = data.list[i].main.temp_max + "°C";
+            tdWindDir.innerHTML = degreeToDirection(data.list[i].wind.deg);
+            tdWindForce.innerHTML = data.list[i].wind.speed + "m/s";
+            if (data.list[i].rain != null) {
+              tdRain.innerHTML = Object.values(data.list[i].rain)[0] + "mm";
+            } else {
+              tdRain.innerHTML = "0 mm";
+            }
+
+            tr.appendChild(tdDate);
+            tr.appendChild(tdMinTemp);
+            tr.appendChild(tdMaxTemp);
+            tr.appendChild(tdWindDir);
+            tr.appendChild(tdWindForce);
+            tr.appendChild(tdRain);
+            _myWeatherTableBody.appendChild(tr);
+          }
        }
-       window.onload = getData;
-   });
-   </script>
+       });
+   }
+   window.onload = getData;
+  });
+</script>
+
   </body>
 </html>
